--- a/.github/workflows/dotnet-sonar-build.yml
+++ b/.github/workflows/dotnet-sonar-build.yml
@@ -40,5 +40,5 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"swiftybathero_EightCare" /o:"eightcare-app" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet build \src
+          dotnet build .\src
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
