--- a/.github/workflows/dotnet-sonar-build.yml
+++ b/.github/workflows/dotnet-sonar-build.yml
@@ -41,5 +41,5 @@ jobs:
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"swiftybathero_EightCare" /o:"eightcare-app" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet build .\src
-          dotnet test .\src
+          dotnet test .\src --collect "Code Coverage"
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
