--- a/src/EightCare.Infrastructure/EightCare.Infrastructure.csproj
+++ b/src/EightCare.Infrastructure/EightCare.Infrastructure.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EightCare.Domain\EightCare.Domain.csproj" />
+    <ProjectReference Include="..\EightCare.Application\EightCare.Application.csproj" />
   </ItemGroup>
 
 </Project>
