--- a/src/EightCare.Infrastructure/EightCare.Infrastructure.csproj
+++ b/src/EightCare.Infrastructure/EightCare.Infrastructure.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\EightCare.Application\EightCare.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Persistence\" />
+  </ItemGroup>
+
 </Project>
