--- a/src/EightCare.API/appsettings.Development.json
+++ b/src/EightCare.API/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "Database": {
+    "ConnectionString": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=KeepersDb;Integrated Security=True"
+  } 
 }
