--- a/src/EightCare.API/appsettings.Development.json
+++ b/src/EightCare.API/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "Database": {
-    "ConnectionString": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=KeepersDb;Integrated Security=True"
+    "ConnectionString": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=CollectionsDb;Integrated Security=True"
   } 
 }
