--- a/src/EightCare.API/appsettings.json
+++ b/src/EightCare.API/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "Database": {
-    "ConnectionString": "Data Source=localhost;Initial Catalog=KeepersDb;Persist Security Info=True;User ID=sa;Password=super4adm1n!"
+    "ConnectionString": "Data Source=localhost;Initial Catalog=CollectionsDb;Persist Security Info=True;User ID=sa;Password=super4adm1n!"
   } 
 }
