--- a/.github/workflows/dotnet-sonar-build.yml
+++ b/.github/workflows/dotnet-sonar-build.yml
@@ -47,7 +47,7 @@ jobs:
           dotnet build
           dotnet test --no-restore `
             --verbosity normal `
-            --filter FullyQualifiedName!~IntegrationTests `
+            --filter FullyQualifiedName!~FunctionalTests `
             --collect:"XPlat Code Coverage" `
             --results-directory:"TestResults" `
             -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
