--- a/src/EightCare.API/Properties/launchSettings.json
+++ b/src/EightCare.API/Properties/launchSettings.json
@@ -6,6 +6,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:5000;https://localhost:5001"
+    },
+    "EightCare.API Production": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      },
+      "applicationUrl": "https://localhost:5001"
     }
   }
 }
