Group tests in corresponding physical directories

--- a/tests/UnitTests/EightCare.API.UnitTests/EightCare.API.UnitTests.csproj
+++ b/tests/UnitTests/EightCare.API.UnitTests/EightCare.API.UnitTests.csproj
@@ -8,10 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.15.0" />
-    <PackageReference Include="FluentAssertions" Version="5.10.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.4" />
+    <PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.15.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
-    <PackageReference Include="Respawn" Version="4.0.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -24,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\EightCare.API\EightCare.API.csproj" />
+    <ProjectReference Include="..\..\..\src\EightCare.API\EightCare.API.csproj" />
   </ItemGroup>
 
 </Project>
