--- a/tests/UnitTests/EightCare.Application.UnitTests/EightCare.Application.UnitTests.csproj
+++ b/tests/UnitTests/EightCare.Application.UnitTests/EightCare.Application.UnitTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\EightCare.Infrastructure\EightCare.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\..\src\EightCare.Application\EightCare.Application.csproj" />
   </ItemGroup>
 
 </Project>
