--- a/.github/workflows/dotnet-pr-build.yml
+++ b/.github/workflows/dotnet-pr-build.yml
@@ -10,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Setup .NET Core
-      uses: actions/setup-dotnet@v2
+      uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.x
+        dotnet-version: 5.0.214
     - name: Install dependencies
       run: dotnet restore
     - name: Build
